--- a/resources/monitor/static_htdocs/sing-box.html
+++ b/resources/monitor/static_htdocs/sing-box.html
@@ -96,6 +96,26 @@
         </div>
     </div>
 
+    <div class="card" style="margin-top: 20px;">
+        <div class="card-header">
+            <h2>Роутинг пакетов с определённой маркой на sing-box</h2>
+        </div>
+        <div class="card-content">
+            <p class="form-hint" style="margin-bottom: 12px;">Трафик с выбранной маркой (fwmark) направляется в table 111 → sbtun0 (VPN). Марки берутся из <code>iptables-save | grep MARK</code>.</p>
+            <div class="form-row" style="align-items: center; flex-wrap: wrap; gap: 10px;">
+                <label for="singbox-route-by-mark-select">Марка:</label>
+                <select id="singbox-route-by-mark-select" class="form-input" style="min-width: 140px;">
+                    <option value="">— загрузка —</option>
+                </select>
+                <span id="singbox-route-by-mark-status" class="value" style="margin-left: 8px; color: #6e6e73; font-size: 13px;"></span>
+            </div>
+            <div class="card-actions" style="margin-top: 12px;">
+                <button class="btn btn-primary" type="button" id="singbox-route-by-mark-enable-btn" onclick="routeByMarkEnable()">Включить</button>
+                <button class="btn btn-secondary" type="button" id="singbox-route-by-mark-disable-btn" onclick="routeByMarkDisable()">Выключить</button>
+            </div>
+        </div>
+    </div>
+
 
         </div>
     </div>
