--- a/resources/monitor/static_htdocs/index.html
+++ b/resources/monitor/static_htdocs/index.html
@@ -2,10 +2,10 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0;url=/dashboard.html">
+<meta http-equiv="refresh" content="0;url=/login.html">
 <title>Redirect</title>
 </head>
 <body>
-<p><a href="/dashboard.html">Перейти на панель монитора</a></p>
+<p><a href="/login.html">Перейти на страницу входа</a></p>
 </body>
 </html>
