Overlay РїСЂРё Р·Р°РіСЂСѓР·РєРµ СЃС‚СЂР°РЅРёС†, СѓР±СЂР°РЅС‹ toast РїСЂРё Save, sidebar: РЎРјРµРЅР° РїР°СЂРѕР»СЏ/Р’С‹С…РѕРґ РІРЅРёР·Сѓ + version 0.01

--- a/resources/monitor/static_htdocs/dnsmasq.html
+++ b/resources/monitor/static_htdocs/dnsmasq.html
@@ -12,48 +12,53 @@
     <div class="main-container">
         <!-- Боковое меню слева -->
         <div class="sidebar-menu">
-    <div class="logo-container">
-        <h1 class="logo">
-            <span class="logo-all">All</span><span class="logo-allow">ow</span>
-        </h1>
-    </div>
-    <a href="/dashboard.html" class="menu-item ">
-        <span>Системный монитор</span>
-    </a>
-    <a href="/settings.html" class="menu-item " >
-        <span>Настройки</span>
-    </a>
-    <a href="/routing.html" class="menu-item ">
-        <span>Маршрутизация</span>
-    </a>
-    <details class="menu-group" open>
-        <summary class="menu-item menu-group-summary">
-            <span>Расширенные настройки</span>
-        </summary>
-        <div class="menu-sublist">
-            <a href="/dnsmasq.html" class="menu-item menu-subitem active">
-                <span>Dnsmasq-full</span>
-            </a>
-            <a href="/dnsmasq-family.html" class="menu-item menu-subitem ">
-                <span>Dnsmasq-full family</span>
-            </a>
-            <a href="/stubby.html" class="menu-item menu-subitem ">
-                <span>Stubby</span>
-            </a>
-            <a href="/stubby-family.html" class="menu-item menu-subitem ">
-                <span>Stubby-family</span>
-            </a>
-            <a href="/sing-box.html" class="menu-item menu-subitem ">
-                <span>Sing-box</span>
-            </a>
+    <div class="sidebar-menu-top">
+        <div class="logo-container">
+            <h1 class="logo">
+                <span class="logo-all">All</span><span class="logo-allow">ow</span>
+            </h1>
         </div>
-    </details>
-    <a href="/change-password.html" class="menu-item ">
-        <span>Смена пароля</span>
-    </a>
-    <a href="/logout.html" class="menu-item menu-item-logout">
-        <span>Выход</span>
-    </a>
+        <a href="/dashboard.html" class="menu-item ">
+            <span>Системный монитор</span>
+        </a>
+        <a href="/settings.html" class="menu-item " >
+            <span>Настройки</span>
+        </a>
+        <a href="/routing.html" class="menu-item ">
+            <span>Маршрутизация</span>
+        </a>
+        <details class="menu-group" open>
+            <summary class="menu-item menu-group-summary">
+                <span>Расширенные настройки</span>
+            </summary>
+            <div class="menu-sublist">
+                <a href="/dnsmasq.html" class="menu-item menu-subitem active">
+                    <span>Dnsmasq-full</span>
+                </a>
+                <a href="/dnsmasq-family.html" class="menu-item menu-subitem ">
+                    <span>Dnsmasq-full family</span>
+                </a>
+                <a href="/stubby.html" class="menu-item menu-subitem ">
+                    <span>Stubby</span>
+                </a>
+                <a href="/stubby-family.html" class="menu-item menu-subitem ">
+                    <span>Stubby-family</span>
+                </a>
+                <a href="/sing-box.html" class="menu-item menu-subitem ">
+                    <span>Sing-box</span>
+                </a>
+            </div>
+        </details>
+    </div>
+    <div class="sidebar-menu-bottom">
+        <a href="/change-password.html" class="menu-item ">
+            <span>Смена пароля</span>
+        </a>
+        <a href="/logout.html" class="menu-item menu-item-logout">
+            <span>Выход</span>
+        </a>
+        <div class="sidebar-version">version 0.01</div>
+    </div>
 </div>
 
 
