--- a/resources/monitor/static_htdocs/routing.html
+++ b/resources/monitor/static_htdocs/routing.html
@@ -65,7 +65,7 @@
         <!-- Область контента -->
         <div class="content-area">
             
-<div class="settings-page">
+<div class="settings-page routing-page">
     <header class="settings-page-header" role="banner">
         <h1>Маршрутизация</h1>
         <div class="settings-save-bar" id="routing-save-bar" aria-live="polite">
