--- a/resources/monitor/static_htdocs/routing.html
+++ b/resources/monitor/static_htdocs/routing.html
@@ -12,55 +12,62 @@
     <div class="main-container">
         <!-- Боковое меню слева -->
         <div class="sidebar-menu">
-    <div class="sidebar-menu-top">
-        <div class="logo-container">
-            <h1 class="logo">
-                <span class="logo-all">All</span><span class="logo-allow">ow</span>
-            </h1>
-        </div>
-        <a href="/dashboard.html" class="menu-item ">
-            <span>Системный монитор</span>
+    <div class="mobile-header">
+        <a href="/dashboard.html" class="mobile-header-logo" aria-label="Allow — на главную">
+            <span class="logo-all">All</span><span class="logo-allow">ow</span>
         </a>
-        <a href="/settings.html" class="menu-item " >
-            <span>Настройки</span>
-        </a>
-        <a href="/routing.html" class="menu-item active">
-            <span>Маршрутизация</span>
-        </a>
-        <details class="menu-group" >
-            <summary class="menu-item menu-group-summary">
-                <span>Расширенные настройки</span>
-            </summary>
-            <div class="menu-sublist">
-                <a href="/dnsmasq.html" class="menu-item menu-subitem ">
-                    <span>Dnsmasq-full</span>
-                </a>
-                <a href="/dnsmasq-family.html" class="menu-item menu-subitem ">
-                    <span>Dnsmasq-full family</span>
-                </a>
-                <a href="/stubby.html" class="menu-item menu-subitem ">
-                    <span>Stubby</span>
-                </a>
-                <a href="/stubby-family.html" class="menu-item menu-subitem ">
-                    <span>Stubby-family</span>
-                </a>
-                <a href="/sing-box.html" class="menu-item menu-subitem ">
-                    <span>Sing-box</span>
-                </a>
-            </div>
-        </details>
+        <button type="button" class="mobile-menu-toggle" aria-label="Открыть меню" aria-expanded="false"></button>
     </div>
-    <div class="sidebar-menu-bottom">
-        <a href="/change-password.html" class="menu-item ">
-            <span>Смена пароля</span>
-        </a>
-        <a href="/logout.html" class="menu-item menu-item-logout">
-            <span>Выход</span>
-        </a>
-        <div class="sidebar-version">version 0.01</div>
+    <div class="sidebar-drawer">
+        <div class="sidebar-menu-top">
+            <div class="logo-container">
+                <h1 class="logo">
+                    <span class="logo-all">All</span><span class="logo-allow">ow</span>
+                </h1>
+            </div>
+            <a href="/dashboard.html" class="menu-item ">
+                <span>Системный монитор</span>
+            </a>
+            <a href="/settings.html" class="menu-item " >
+                <span>Настройки</span>
+            </a>
+            <a href="/routing.html" class="menu-item active">
+                <span>Маршрутизация</span>
+            </a>
+            <details class="menu-group" >
+                <summary class="menu-item menu-group-summary">
+                    <span>Расширенные настройки</span>
+                </summary>
+                <div class="menu-sublist">
+                    <a href="/dnsmasq.html" class="menu-item menu-subitem ">
+                        <span>Dnsmasq-full</span>
+                    </a>
+                    <a href="/dnsmasq-family.html" class="menu-item menu-subitem ">
+                        <span>Dnsmasq-full family</span>
+                    </a>
+                    <a href="/stubby.html" class="menu-item menu-subitem ">
+                        <span>Stubby</span>
+                    </a>
+                    <a href="/stubby-family.html" class="menu-item menu-subitem ">
+                        <span>Stubby-family</span>
+                    </a>
+                    <a href="/sing-box.html" class="menu-item menu-subitem ">
+                        <span>Sing-box</span>
+                    </a>
+                </div>
+            </details>
+        </div>
+        <div class="sidebar-menu-bottom">
+            <a href="/change-password.html" class="menu-item ">
+                <span>Смена пароля</span>
+            </a>
+            <a href="/logout.html" class="menu-item menu-item-logout">
+                <span>Выход</span>
+            </a>
+            <div class="sidebar-version">version 0.01</div>
+        </div>
     </div>
 </div>
-
 
         <!-- Область контента -->
         <div class="content-area">
@@ -74,9 +81,16 @@
         </div>
     </header>
 
+    <!-- Мобильные табы: переключение колонок (видно только на узких экранах) -->
+    <div class="routing-mobile-tabs" role="tablist" aria-label="Тип маршрутизации">
+        <button type="button" class="routing-mobile-tab active" role="tab" aria-selected="true" data-column="direct">Напрямую</button>
+        <button type="button" class="routing-mobile-tab" role="tab" aria-selected="false" data-column="bypass">Обход</button>
+        <button type="button" class="routing-mobile-tab" role="tab" aria-selected="false" data-column="vpn">VPN</button>
+    </div>
+
     <div class="routing-columns">
         <!-- Колонка 1: Напрямую -->
-        <div class="routing-column" id="direct-column">
+        <div class="routing-column mobile-active" id="direct-column" data-column="direct">
             <div class="column-header">
                 <h2>Напрямую</h2>
                 <button class="btn btn-primary btn-sm" onclick="addBlock('direct')">+ Добавить блок</button>
@@ -87,7 +101,7 @@
         </div>
 
         <!-- Колонка 2: Встроенные инструменты обхода -->
-        <div class="routing-column" id="bypass-column">
+        <div class="routing-column" id="bypass-column" data-column="bypass">
             <div class="column-header">
                 <h2>Встроенные инструменты обхода</h2>
                 <button class="btn btn-primary btn-sm" onclick="addBlock('bypass')">+ Добавить блок</button>
@@ -98,7 +112,7 @@
         </div>
 
         <!-- Колонка 3: VPN -->
-        <div class="routing-column" id="vpn-column">
+        <div class="routing-column" id="vpn-column" data-column="vpn">
             <div class="column-header">
                 <h2>VPN</h2>
                 <button class="btn btn-primary btn-sm" onclick="addBlock('vpn')">+ Добавить блок</button>
@@ -250,6 +264,7 @@
     <script src="/static/logs-viewer.js"></script>
     <script src="/static/confirm-modal.js"></script>
     <script src="/static/progress-overlay.js"></script>
+    <script src="/static/mobile-menu.js"></script>
     
     <script src="/static/routing.js"></script>
 
