--- a/resources/monitor/static_htdocs/stubby.html
+++ b/resources/monitor/static_htdocs/stubby.html
@@ -12,55 +12,62 @@
     <div class="main-container">
         <!-- Боковое меню слева -->
         <div class="sidebar-menu">
-    <div class="sidebar-menu-top">
-        <div class="logo-container">
-            <h1 class="logo">
-                <span class="logo-all">All</span><span class="logo-allow">ow</span>
-            </h1>
-        </div>
-        <a href="/dashboard.html" class="menu-item ">
-            <span>Системный монитор</span>
+    <div class="mobile-header">
+        <a href="/dashboard.html" class="mobile-header-logo" aria-label="Allow — на главную">
+            <span class="logo-all">All</span><span class="logo-allow">ow</span>
         </a>
-        <a href="/settings.html" class="menu-item " >
-            <span>Настройки</span>
-        </a>
-        <a href="/routing.html" class="menu-item ">
-            <span>Маршрутизация</span>
-        </a>
-        <details class="menu-group" open>
-            <summary class="menu-item menu-group-summary">
-                <span>Расширенные настройки</span>
-            </summary>
-            <div class="menu-sublist">
-                <a href="/dnsmasq.html" class="menu-item menu-subitem ">
-                    <span>Dnsmasq-full</span>
-                </a>
-                <a href="/dnsmasq-family.html" class="menu-item menu-subitem ">
-                    <span>Dnsmasq-full family</span>
-                </a>
-                <a href="/stubby.html" class="menu-item menu-subitem active">
-                    <span>Stubby</span>
-                </a>
-                <a href="/stubby-family.html" class="menu-item menu-subitem ">
-                    <span>Stubby-family</span>
-                </a>
-                <a href="/sing-box.html" class="menu-item menu-subitem ">
-                    <span>Sing-box</span>
-                </a>
-            </div>
-        </details>
+        <button type="button" class="mobile-menu-toggle" aria-label="Открыть меню" aria-expanded="false"></button>
     </div>
-    <div class="sidebar-menu-bottom">
-        <a href="/change-password.html" class="menu-item ">
-            <span>Смена пароля</span>
-        </a>
-        <a href="/logout.html" class="menu-item menu-item-logout">
-            <span>Выход</span>
-        </a>
-        <div class="sidebar-version">version 0.01</div>
+    <div class="sidebar-drawer">
+        <div class="sidebar-menu-top">
+            <div class="logo-container">
+                <h1 class="logo">
+                    <span class="logo-all">All</span><span class="logo-allow">ow</span>
+                </h1>
+            </div>
+            <a href="/dashboard.html" class="menu-item ">
+                <span>Системный монитор</span>
+            </a>
+            <a href="/settings.html" class="menu-item " >
+                <span>Настройки</span>
+            </a>
+            <a href="/routing.html" class="menu-item ">
+                <span>Маршрутизация</span>
+            </a>
+            <details class="menu-group" open>
+                <summary class="menu-item menu-group-summary">
+                    <span>Расширенные настройки</span>
+                </summary>
+                <div class="menu-sublist">
+                    <a href="/dnsmasq.html" class="menu-item menu-subitem ">
+                        <span>Dnsmasq-full</span>
+                    </a>
+                    <a href="/dnsmasq-family.html" class="menu-item menu-subitem ">
+                        <span>Dnsmasq-full family</span>
+                    </a>
+                    <a href="/stubby.html" class="menu-item menu-subitem active">
+                        <span>Stubby</span>
+                    </a>
+                    <a href="/stubby-family.html" class="menu-item menu-subitem ">
+                        <span>Stubby-family</span>
+                    </a>
+                    <a href="/sing-box.html" class="menu-item menu-subitem ">
+                        <span>Sing-box</span>
+                    </a>
+                </div>
+            </details>
+        </div>
+        <div class="sidebar-menu-bottom">
+            <a href="/change-password.html" class="menu-item ">
+                <span>Смена пароля</span>
+            </a>
+            <a href="/logout.html" class="menu-item menu-item-logout">
+                <span>Выход</span>
+            </a>
+            <div class="sidebar-version">version 0.01</div>
+        </div>
     </div>
 </div>
-
 
         <!-- Область контента -->
         <div class="content-area">
@@ -205,6 +212,7 @@
     <script src="/static/logs-viewer.js"></script>
     <script src="/static/confirm-modal.js"></script>
     <script src="/static/progress-overlay.js"></script>
+    <script src="/static/mobile-menu.js"></script>
     
     <script src="/static/stubby.js"></script>
 
